finished footer adaptive layout

--- a/src/pug/pages/homepage/index.pug
+++ b/src/pug/pages/homepage/index.pug
@@ -8,6 +8,8 @@ html(lang="en")
         link(rel="stylesheet", href=`${paths.css}`)
         title Document
     body 
-        div.container
-            include ../../partials/components/header.pug
+        
+        //- include ../../partials/components/header.pug
+        include ../../partials/components/footer.pug
+
         script(type="module", src=`${paths.js}/homepage/main.js`) 
