--- a/src/scss/base/_vars.scss
+++ b/src/scss/base/_vars.scss
@@ -1,5 +1,12 @@
 @use 'sass:map';
 
+$colors: (
+    footer-bg: #1e212c,
+    white: #fff,
+    grey: rgba(255, 255, 255, .6),
+    orange: #FF5A30,
+);
+
 $breakpoints: (
     desktop: 1920px,
     laptop-l: 1440px,
