created button component

--- a/src/pug/partials/components/footer.pug
+++ b/src/pug/partials/components/footer.pug
@@ -35,7 +35,7 @@ include ../../_paths.pug
                                 form.top__form
                                     .top__form-wrap 
                                         input(type="text", name="mail", placeholder="Your email address ")
-                                        button(type="submit") subscribe
+                                        button(type="submit" class="button") subscribe
                                     span *Subscribe to our newsletter to receive communications and early updates from Createx Construction Bureau.
                 .middle 
                     .middle__block
@@ -77,5 +77,5 @@ include ../../_paths.pug
                             | &#160 by Createx Studio
                     .bottom__to-up  
                         span GO TO TOP
-                        button
+                        button.button
                             img(src=`${paths.img.icons}/arrow-icon.svg`, alt="top-arrow")
