--- a/src/scss/base/_vars.scss
+++ b/src/scss/base/_vars.scss
@@ -5,6 +5,8 @@ $colors: (
     white: #fff,
     grey: rgba(255, 255, 255, .6),
     orange: #FF5A30,
+    orange-disabled: #ffac97,
+    red: #FC3300,
 );
 
 $breakpoints: (
