--- a/src/scss/components/footer.scss
+++ b/src/scss/components/footer.scss
@@ -86,13 +86,9 @@
                 padding: 12px 0 12px 16px;
             }
 
-            button {
-                font-size: 14px;
-                font-weight: 700;
-                text-transform: uppercase;
+            .button {
                 border-radius: 0 4px 4px 0;
                 padding: 13px 24px;
-                background-color: map.get($colors, orange);
 
                 @include respond-to(mobile) {
                     padding: 13px 10px;
@@ -183,11 +179,8 @@
                 }
             }
 
-            button {
-                background-color: map.get($colors, orange);
+            .button {
                 padding: 15px 12px;
-                cursor: pointer;
-                border-radius: 4px;
             }
         }
     }
