finished form adaptive layout

--- a/src/pug/pages/homepage/index.pug
+++ b/src/pug/pages/homepage/index.pug
@@ -9,7 +9,8 @@ html(lang="en")
         title Document
     body 
         
-        include ../../partials/components/header.pug
-        include ../../partials/components/footer.pug
+        //- include ../../partials/components/header.pug
+        include ../../partials/components/form.pug
+        //- include ../../partials/components/footer.pug
 
-        script(type="module", src=`${paths.js}/homepage/main.js`) 
+        //- script(type="module", src=`${paths.js}/homepage/main.js`) 
