--- a/src/scss/base/_reset.scss
+++ b/src/scss/base/_reset.scss
@@ -80,6 +80,8 @@ textarea {
     color: inherit;
     border: none;
     outline: none;
+    resize: none;
+    field-sizing: content;
 }
 
 button {
