--- a/src/scss/base/_vars.scss
+++ b/src/scss/base/_vars.scss
@@ -5,8 +5,19 @@ $colors: (
     white: #fff,
     grey: rgba(255, 255, 255, .6),
     orange: #FF5A30,
+    orange-opacity: rgba(255, 90, 48, .4),
     orange-disabled: #ffac97,
     red: #FC3300,
+    input-bg: #F4F5F6,
+    input-border: #d7dadd,
+    input-color: #424551,
+    input-success-color: #1E212C,
+    input-placeholder: #9A9CA5,
+    input-lite-bg: #393c46,
+    input-lite-border: #61636b,
+    input-lite-color: #b0b1b5,
+    green: #03CEA4,
+    danger: #FF4242
 );
 
 $breakpoints: (
