--- a/src/scss/components/button.scss
+++ b/src/scss/components/button.scss
@@ -8,6 +8,7 @@
     text-transform: uppercase;
     font-size: 16px;
     font-weight: 700;
+    color: map.get($colors, white);
 
     &:hover,
     &:active {
