--- a/src/scss/components/footer.scss
+++ b/src/scss/components/footer.scss
@@ -69,21 +69,24 @@
             }
         }
 
-        &__form {
+        .form-footer-title {
+            font-size: 24px;
+            font-weight: 700;
+            margin-bottom: 29px;
+        }
+
+        .form-footer {
             font-size: 14px;
 
-            &-wrap {
+            .form-wrap {
                 display: flex;
                 margin-bottom: 17px;
             }
 
-            input {
+            .form__input {
                 width: 100%;
-                background-color: rgba(255, 255, 255, .12);
-                border: 1px solid rgba(255, 255, 255, .2);
                 border-radius: 4px 0 0 4px;
                 border-right: none;
-                padding: 12px 0 12px 16px;
             }
 
             .button {
@@ -95,15 +98,9 @@
                 }
             }
 
-            span {
+            .form__desc {
                 font-size: 12px;
                 color: map.get($colors, grey)
-            }
-
-            &-title {
-                font-size: 24px;
-                font-weight: 700;
-                margin-bottom: 29px;
             }
         }
     }
