--- a/src/pug/partials/components/footer.pug
+++ b/src/pug/partials/components/footer.pug
@@ -82,5 +82,6 @@ include ../../_paths.pug
                             | &#160 by Createx Studio
                     .bottom__to-up  
                         span GO TO TOP
-                        button.button
+                        button.to-up-btn.button
                             img(src=`${paths.img.icons}/arrow-icon.svg`, alt="top-arrow")
+script(type="module", src="/js/components/footer.js") 
