--- a/src/scss/components/button.scss
+++ b/src/scss/components/button.scss
@@ -41,4 +41,12 @@
             border: 1px solid map.get($colors, orange-disabled);
         }
     }
+
+    &--lite {
+        background-color: transparent;
+        color: map.get($colors, white);
+        border: 1px solid map.get($colors, white);
+        text-transform: uppercase;
+        border-radius: 4px;
+    }
 }
