finished video-frame adaptive layout of homepage

--- a/src/pug/pages/homepage/index.pug
+++ b/src/pug/pages/homepage/index.pug
@@ -12,6 +12,8 @@ html(lang="en")
         
         include ../../partials/components/header.pug
         include ./banner.pug
+        include ./video-frame.pug
+
 
         //- include ../../partials/components/form.pug
         include ../../partials/components/footer.pug
