finished target block adaptive layout on homepage

--- a/src/pug/pages/homepage/index.pug
+++ b/src/pug/pages/homepage/index.pug
@@ -13,6 +13,8 @@ html(lang="en")
         include ../../partials/components/header.pug
         include ./banner.pug
         include ./video-frame.pug
+        include ./target.pug
+
 
 
         //- include ../../partials/components/form.pug
