finished feedback adaptive layuot on homepage

--- a/src/pug/pages/homepage/index.pug
+++ b/src/pug/pages/homepage/index.pug
@@ -14,8 +14,7 @@ html(lang="en")
         include ./banner.pug
         include ./video-frame.pug
         include ./target.pug
-
-
+        include ./feedback.pug
 
         //- include ../../partials/components/form.pug
         include ../../partials/components/footer.pug
