finished services adaptive layout on homepage

--- a/src/pug/pages/homepage/index.pug
+++ b/src/pug/pages/homepage/index.pug
@@ -15,6 +15,8 @@ html(lang="en")
         include ./video-frame.pug
         include ./target.pug
         include ./feedback.pug
+        include ./services.pug
+
 
         //- include ../../partials/components/form.pug
         include ../../partials/components/footer.pug
