--- a/src/scss/pages/homepage/feedback.scss
+++ b/src/scss/pages/homepage/feedback.scss
@@ -10,10 +10,12 @@
     }
 
     &__form {
+        position: relative;
         width: auto;
-        margin: 0 auto;
+        margin: 0 auto -90px;
         padding: 48px 60px;
         max-width: unset;
+        z-index: 2;
 
         @include respond-to(mobile) {
             padding: 38px 0;
@@ -52,6 +54,10 @@
                 margin: 0 auto;
                 width: 100%;
                 max-width: 600px;
+            }
+
+            @include respond-to(mobile) {
+                padding: 0 30px;
             }
 
             .form__input {
