finished projects block adaptive layout on homepage

--- a/src/pug/pages/homepage/index.pug
+++ b/src/pug/pages/homepage/index.pug
@@ -16,6 +16,7 @@ html(lang="en")
         include ./target.pug
         include ./feedback.pug
         include ./services.pug
+        include ./projects.pug
 
 
         //- include ../../partials/components/form.pug
@@ -23,3 +24,5 @@ html(lang="en")
         script(src='https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.js')
         script(type="module", src=`${paths.js}/homepage/main.js`)
         script(type="module", src=`${paths.js}/homepage/swiper.js`)
+        script(type="module", src=`${paths.js}/homepage/projectsSwiper.js`)
+
