--- a/src/pug/pages/homepage/index.pug
+++ b/src/pug/pages/homepage/index.pug
@@ -17,9 +17,9 @@ html(lang="en")
         include ./feedback.pug
         include ./services.pug
         include ./projects.pug
+        include ./parthners.pug
 
-
-        //- include ../../partials/components/form.pug
+        include ../../partials/components/form.pug
         include ../../partials/components/footer.pug
         script(src='https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.js')
         script(type="module", src=`${paths.js}/homepage/main.js`)
