finishet partners block adaptive payout on homepage

--- a/src/pug/pages/homepage/index.pug
+++ b/src/pug/pages/homepage/index.pug
@@ -25,4 +25,6 @@ html(lang="en")
         script(type="module", src=`${paths.js}/homepage/main.js`)
         script(type="module", src=`${paths.js}/homepage/swiper.js`)
         script(type="module", src=`${paths.js}/homepage/projectsSwiper.js`)
+        script(type="module", src=`${paths.js}/homepage/parthnersSwiper.js`)
+
 
