finished stats block adaptive layout on homepage

--- a/src/pug/pages/homepage/feedback.pug
+++ b/src/pug/pages/homepage/feedback.pug
@@ -1,6 +1,6 @@
 .container 
     .feedback 
-        form.form.feedback__form(action="#") 
+        form.feedback__form(action="#") 
             h2.feedback__title.form__title Want to know more? Ask us a question:
             .form__input-wrap 
                 .form__input-item 
