--- a/src/pug/pages/homepage/index.pug
+++ b/src/pug/pages/homepage/index.pug
@@ -18,6 +18,7 @@ html(lang="en")
         include ./services.pug
         include ./projects.pug
         include ./parthners.pug
+        include ./stats.pug
 
         include ../../partials/components/form.pug
         include ../../partials/components/footer.pug
@@ -26,5 +27,7 @@ html(lang="en")
         script(type="module", src=`${paths.js}/homepage/swiper.js`)
         script(type="module", src=`${paths.js}/homepage/projectsSwiper.js`)
         script(type="module", src=`${paths.js}/homepage/parthnersSwiper.js`)
+        script(type="module", src=`${paths.js}/homepage/stats.js`)
+
 
 
