finished news block adaptive layout on homepage

--- a/src/pug/pages/homepage/index.pug
+++ b/src/pug/pages/homepage/index.pug
@@ -19,6 +19,8 @@ html(lang="en")
         include ./projects.pug
         include ./parthners.pug
         include ./stats.pug
+        include ../../partials/components/news-vidget.pug
+
 
         include ../../partials/components/form.pug
         include ../../partials/components/footer.pug
