fixed bugs, added paths

--- a/src/pug/pages/homepage/projects.pug
+++ b/src/pug/pages/homepage/projects.pug
@@ -20,7 +20,7 @@ section.projects
             .project-card__content
               h5.project-card__title Red Finger Building
               p.project-card__category Business Centers
-              a.project-card__link.button--outline(href="#") View Project
+              a.project-card__link.button--outline(href="/pages/homepage/work/modern_cottage") View Project
 
         .projects__slide.swiper-slide
           .project-card
@@ -29,7 +29,7 @@ section.projects
             .project-card__content
               h5.project-card__title Cubes Building
               p.project-card__category Business Centers
-              a.project-card__link.button--outline(href="#") View Project
+              a.project-card__link.button--outline(href="/pages/homepage/work/modern_cottage") View Project
 
         .projects__slide.swiper-slide
           .project-card
@@ -38,7 +38,7 @@ section.projects
             .project-card__content
               h5.project-card__title The Pencil Building
               p.project-card__category Stores & Malls
-              a.project-card__link.button--outline(href="#") View Project
+              a.project-card__link.button--outline(href="/pages/homepage/work/modern_cottage") View Project
 
         .projects__slide.swiper-slide
           .project-card
@@ -47,7 +47,7 @@ section.projects
             .project-card__content
               h5.project-card__title Red Finger Building
               p.project-card__category Business Centers
-              a.project-card__link.button--outline(href="#") View Project
+              a.project-card__link.button--outline(href="/pages/homepage/work/modern_cottage") View Project
         
         .projects__slide.swiper-slide
           .project-card
@@ -56,10 +56,10 @@ section.projects
             .project-card__content
               h5.project-card__title Cubes Building
               p.project-card__category Business Centers
-              a.project-card__link.button--outline(href="#") View Project
+              a.project-card__link.button--outline(href="/pages/homepage/work/modern_cottage") View Project
 
 
     .projects__footer
       span.projects__cta Explore all our works
-      a.projects__portfolio-link.button(href="#") View Portfolio
+      a.projects__portfolio-link.button(href="/pages/homepage/work") View Portfolio
 
