--- a/src/pug/pages/homepage/services.pug
+++ b/src/pug/pages/homepage/services.pug
@@ -45,4 +45,4 @@ include ../../_paths.pug
                     h5.services__item-title Repairs
         .services__more 
             span Learn more about our services
-            a(href="#").button.services__button View services
+            a(href="/pages/homepage/services").button.services__button View services
