--- a/src/pug/partials/components/header.pug
+++ b/src/pug/partials/components/header.pug
@@ -9,15 +9,15 @@ header.header
                         img(src=`${paths.img.img}/logo.svg`, alt="logo")
             ul.nav__list 
                 li
-                    a(href="#") About Us
+                    a(href="/pages/homepage/about") About Us
                 li
-                    a(href="#") Services
+                    a(href="/pages/homepage/services") Services
                 li
-                    a(href="#") Work
+                    a(href="/pages/homepage/work") Work
                 li
-                    a(href="#") News
+                    a(href="/pages/homepage/news") News
                 li
-                    a(href="#") Contacts
+                    a(href="/pages/homepage/contacts") Contacts
             ul.nav__feedback 
                 li
                     img(src=`${paths.img.icons}/phone-icon.svg`, alt="phone")
