--- a/src/pug/partials/components/burger.pug
+++ b/src/pug/partials/components/burger.pug
@@ -5,13 +5,13 @@
   nav.sidebar-menu
     ul
       li.sidebar-link
-        a(href='#') About Us
+        a(href='/pages/homepage/about') About Us
       li.sidebar-link
-        a(href='#') Services
+        a(href='/pages/homepage/services') Services
       li.sidebar-link
-        a(href='#') Work
+        a(href='/pages/homepage/work') Work
       li.sidebar-link
-        a(href='#') News
+        a(href='/pages/homepage/news') News
       li.sidebar-link
         a(href="tel:+4055550128") Call us
       li.sidebar-link
