--- a/src/pug/partials/components/footer.pug
+++ b/src/pug/partials/components/footer.pug
@@ -41,7 +41,7 @@ include ../../_paths.pug
                                         button(type="submit" class="button") subscribe
                                     span.form__message.form__message--success Looks good!
                                     span.form__message.form__message--danger Please provide a valid input.
-                                span.form__desc *Subscribe to our newsletter to receive communications and early updates from Createx Construction Bureau.
+                                    span.form__desc *Subscribe to our newsletter to receive communications and early updates from Createx Construction Bureau.
                 .middle             
                     .middle__block
                         .contacts 
@@ -51,29 +51,29 @@ include ../../_paths.pug
                                     span Address: 
                                     a(href="#") 8502 Preston Rd. Inglewood, New York
                                 li.contacts__item.middle__item
-                                    span Call:
+                                    span Call: 
                                     a(href="tel:+4055550128") (405) 555-0128
                                 li.contacts__item.middle__item
-                                    span Email:
+                                    span Email: 
                                     a(href="mailto:hello@createx.com") hello@createx.com
                         .about 
                             h6.about__title.middle__title WHO WE ARE
                             ul.about__list.middle__list 
                                 li.about__item.middle__item
-                                    a(href="#") About Us
+                                    a(href="/pages/homepage/about") About Us
                                 li.about__item.middle__item
-                                    a(href="#") Available Positions
+                                    a(href="/pages/homepage/about/available_positions") Available Positions
                                 li.about__item.middle__item
-                                    a(href="#") Contacts
+                                    a(href="/pages/homepage/contacts") Contacts
                         .exp
                             h6.exp__title.middle__title OUR EXPERIENCE
                             ul.exp__list.middle__list 
                                 li.expt__item.middle__item
-                                    a(href="#") Services
+                                    a(href="/pages/homepage/services") Services
                                 li.exp__item.middle__item
-                                    a(href="#") Work
+                                    a(href="/pages/homepage/work") Work
                                 li.exp__item.middle__item
-                                    a(href="#") News
+                                    a(href="/pages/homepage/news") News
                 .bottom
                     .bottom__copyright 
                         span
