--- a/src/pug/partials/components/news-vidget.pug
+++ b/src/pug/partials/components/news-vidget.pug
@@ -9,7 +9,7 @@ include ../../_paths.pug
                     .news-post__image-container
                         img.news-post__image(src=`${paths.img.img}/news/image-1.png`, alt='Featured article image')
                     .news-post__content
-                        a(href="#", class="news-post__title") How to Build Climate Change-Resilient Infrastructure
+                        a(href="/pages/homepage/news/how_to_build", class="news-post__title") How to Build Climate Change-Resilient Infrastructure
                         .news-post__meta
                             span.news-post__category Industry News  
                             span.news-post__date June 24, 2020  
@@ -21,7 +21,7 @@ include ../../_paths.pug
                     .news-post__image-container
                         img.news-post__image(src=`${paths.img.img}/news/image-2.png`, alt='Small article image 1')
                     .news-post__content
-                        a(href="#", class="news-post__title") How Construction Can Help Itself
+                        a(href="/pages/homepage/news/how_to_build", class="news-post__title") How Construction Can Help Itself
                         .news-post__meta
                             span.news-post__category Innovation  
                             span.news-post__date June 12, 2020  
@@ -32,7 +32,7 @@ include ../../_paths.pug
                     .news-post__image-container
                         img.news-post__image(src=`${paths.img.img}/news/image-3.png`, alt='Small article image 2')
                     .news-post__content
-                        a(href="#", class="news-post__title") Types of Flooring Materials
+                        a(href="/pages/homepage/news/how_to_build", class="news-post__title") Types of Flooring Materials
                         .news-post__meta
                             span.news-post__category Company News  
                             span.news-post__date December 1, 2019  
@@ -40,4 +40,4 @@ include ../../_paths.pug
                             span.news-post__comments No comments
         .news__link 
             h3.news__link-title Explore all our news posts
-            a.news__link-button.button View all news
+            a(href="/pages/homepage/news", class="news__link-button button") View all news
