--- a/src/scss/pages/homepage/banner.scss
+++ b/src/scss/pages/homepage/banner.scss
@@ -114,6 +114,7 @@
     }
 
     &__button {
+        display: inline-block;
         padding: 16px 42px;
 
         @include respond-to(tablet-l) {
