finished offer block adaptive layout of interior design page

--- a/src/pug/partials/components/header.pug
+++ b/src/pug/partials/components/header.pug
@@ -30,3 +30,6 @@ header.header
                         p Talk to us
                         a(href="mailto:hello@createx.com") hello@createx.com
         include ../../partials/components/burger.pug
+        
+script(type="module", src=`${paths.js}/homepage/main.js`)
+
