--- a/src/pug/partials/hero_data/_hero_data.pug
+++ b/src/pug/partials/hero_data/_hero_data.pug
@@ -13,7 +13,7 @@ include ../../_paths.pug
         interiorDesign: 
             {
                 imgUrl: `${paths.img.img}/interior-design/head-bg.png`,
-                breadcrumbs: "Homepage / Services",
+                breadcrumbs: "Homepage / Services /",
                 activeBreadcrumb: " Interior Design",
                 title: 'INTERIOR DESIGN',
                 desc: "Dui augue nec mi mi. Ut ac lectus donec fames pellentesque. Laoreet aenean vulputate elementum blandit amet."
