--- a/src/pug/pages/homepage/index.pug
+++ b/src/pug/pages/homepage/index.pug
@@ -25,7 +25,7 @@ html(lang="en")
         include ../../partials/components/form.pug
         include ../../partials/components/footer.pug
         script(src='https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.js')
-        script(type="module", src=`${paths.js}/homepage/main.js`)
+        //- script(type="module", src=`${paths.js}/homepage/main.js`)
         script(type="module", src=`${paths.js}/homepage/swiper.js`)
         script(type="module", src=`${paths.js}/homepage/projectsSwiper.js`)
         script(type="module", src=`${paths.js}/homepage/parthnersSwiper.js`)
