--- a/src/pug/pages/homepage/services/interior_design/index.pug
+++ b/src/pug/pages/homepage/services/interior_design/index.pug
@@ -16,6 +16,7 @@ html(lang="en")
         +hero(heroData.interiorDesign)
 
         include ./offer.pug
+        include ./how-it-works.pug
 
         include ../../../../partials/components/form.pug
         include ../../../../partials/components/footer.pug
