finished benefits block adaptive layout

--- a/src/pug/pages/homepage/services/interior_design/index.pug
+++ b/src/pug/pages/homepage/services/interior_design/index.pug
@@ -17,6 +17,7 @@ html(lang="en")
 
         include ./offer.pug
         include ./how-it-works.pug
+        include ./benefits.pug
 
         include ../../../../partials/components/form.pug
         include ../../../../partials/components/footer.pug
