--- a/src/pug/pages/homepage/projects.pug
+++ b/src/pug/pages/homepage/projects.pug
@@ -1,4 +1,7 @@
 include ../../_paths.pug
+include ../../partials/data/_projects-cards_data.pug
+include ../../partials/mixins/_project-card.pug
+
 
 section.projects
   .projects__container.container
@@ -13,51 +16,51 @@ section.projects
                 path(fill-rule='evenodd' clip-rule='evenodd' d='M11.7929 0.292893C12.1834 -0.0976311 12.8166 -0.0976311 13.2071 0.292893L17.7071 4.79289C18.0976 5.18342 18.0976 5.81658 17.7071 6.20711L13.2071 10.7071C12.8166 11.0976 12.1834 11.0976 11.7929 10.7071C11.4024 10.3166 11.4024 9.68342 11.7929 9.29289L14.5858 6.5H1C0.447715 6.5 0 6.05228 0 5.5C0 4.94772 0.447715 4.5 1 4.5H14.5858L11.7929 1.70711C11.4024 1.31658 11.4024 0.683417 11.7929 0.292893Z' fill='#424551')
     .projects__slider.projects__swiper
       .swiper-wrapper
-        .projects__slide.swiper-slide
-          .project-card
-            .project-card__image-wrapper
-              img.project-card__image(src=`${paths.img.img}/homepage/services/portfolio-card/image-1.jpg` alt="Red Finger Building")
-            .project-card__content
-              h5.project-card__title Red Finger Building
-              p.project-card__category Business Centers
-              a.project-card__link.button--outline(href="/pages/homepage/work/modern_cottage") View Project
+        //- .projects__slide.swiper-slide
+        //-   .project-card
+        //-     .project-card__image-wrapper
+        //-       img.project-card__image(src=`${paths.img.img}/homepage/services/portfolio-card/image-1.jpg` alt="Red Finger Building")
+        //-     .project-card__content
+        //-       h5.project-card__title Red Finger Building
+        //-       p.project-card__category Business Centers
+        //-       a.project-card__link.button--outline(href="/pages/homepage/work/modern_cottage") View Project
 
-        .projects__slide.swiper-slide
-          .project-card
-            .project-card__image-wrapper
-              img.project-card__image(src=`${paths.img.img}/homepage/services/portfolio-card/image-2.png`, alt="Cubes Building")
-            .project-card__content
-              h5.project-card__title Cubes Building
-              p.project-card__category Business Centers
-              a.project-card__link.button--outline(href="/pages/homepage/work/modern_cottage") View Project
+        //- .projects__slide.swiper-slide
+        //-   .project-card
+        //-     .project-card__image-wrapper
+        //-       img.project-card__image(src=`${paths.img.img}/homepage/services/portfolio-card/image-2.png`, alt="Cubes Building")
+        //-     .project-card__content
+        //-       h5.project-card__title Cubes Building
+        //-       p.project-card__category Business Centers
+        //-       a.project-card__link.button--outline(href="/pages/homepage/work/modern_cottage") View Project
 
-        .projects__slide.swiper-slide
-          .project-card
-            .project-card__image-wrapper
-              img.project-card__image(src=`${paths.img.img}/homepage/services/portfolio-card/image-3.png`, alt="The Pencil Building")
-            .project-card__content
-              h5.project-card__title The Pencil Building
-              p.project-card__category Stores & Malls
-              a.project-card__link.button--outline(href="/pages/homepage/work/modern_cottage") View Project
+        //- .projects__slide.swiper-slide
+        //-   .project-card
+        //-     .project-card__image-wrapper
+        //-       img.project-card__image(src=`${paths.img.img}/homepage/services/portfolio-card/image-3.png`, alt="The Pencil Building")
+        //-     .project-card__content
+        //-       h5.project-card__title The Pencil Building
+        //-       p.project-card__category Stores & Malls
+        //-       a.project-card__link.button--outline(href="/pages/homepage/work/modern_cottage") View Project
 
-        .projects__slide.swiper-slide
-          .project-card
-            .project-card__image-wrapper
-              img.project-card__image(src=`${paths.img.img}/homepage/services/portfolio-card/image-1.jpg`, alt="Red Finger Building")
-            .project-card__content
-              h5.project-card__title Red Finger Building
-              p.project-card__category Business Centers
-              a.project-card__link.button--outline(href="/pages/homepage/work/modern_cottage") View Project
+        //- .projects__slide.swiper-slide
+        //-   .project-card
+        //-     .project-card__image-wrapper
+        //-       img.project-card__image(src=`${paths.img.img}/homepage/services/portfolio-card/image-1.jpg`, alt="Red Finger Building")
+        //-     .project-card__content
+        //-       h5.project-card__title Red Finger Building
+        //-       p.project-card__category Business Centers
+        //-       a.project-card__link.button--outline(href="/pages/homepage/work/modern_cottage") View Project
         
-        .projects__slide.swiper-slide
-          .project-card
-            .project-card__image-wrapper
-              img.project-card__image(src=`${paths.img.img}/homepage/services/portfolio-card/image-2.png`, alt="Cubes Building")
-            .project-card__content
-              h5.project-card__title Cubes Building
-              p.project-card__category Business Centers
-              a.project-card__link.button--outline(href="/pages/homepage/work/modern_cottage") View Project
-
+        //- .projects__slide.swiper-slide
+        //-   .project-card
+        //-     .project-card__image-wrapper
+        //-       img.project-card__image(src=`${paths.img.img}/homepage/services/portfolio-card/image-2.png`, alt="Cubes Building")
+        //-     .project-card__content
+        //-       h5.project-card__title Cubes Building
+        //-       p.project-card__category Business Centers
+        //-       a.project-card__link.button--outline(href="/pages/homepage/work/modern_cottage") View Project
+        +projectsCards(projectCards)
 
     .projects__footer
       span.projects__cta Explore all our works
