--- a/src/pug/pages/homepage/services/interior_design/index.pug
+++ b/src/pug/pages/homepage/services/interior_design/index.pug
@@ -1,3 +1,6 @@
+include ../../../../_paths.pug
+
+
 doctype html
 html(lang="en")
     head
@@ -5,9 +8,11 @@ html(lang="en")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         title Document
         link(rel="stylesheet", href="/css/main.min.css")
+        link(rel='stylesheet' href='https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.css')
+
     body 
         include ../../../../_paths.pug
-        include ../../../../partials/hero_data/_hero_data.pug
+        include ../../../../partials/data/_hero_data.pug
         include ../../../../partials/components/header.pug
         include ../../../../partials/mixins/_hero.pug
 
@@ -18,9 +23,14 @@ html(lang="en")
         include ./offer.pug
         include ./how-it-works.pug
         include ./benefits.pug
+        include ./related-projects.pug
 
         include ../../../../partials/components/form.pug
         include ../../../../partials/components/footer.pug
+
+        script(src='https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.js')
+        script(type="module", src=`${paths.js}/homepage/projectsSwiper.js`)
+
 
 
         
