finished pricing block adaptive layout

--- a/src/pug/pages/homepage/services/interior_design/index.pug
+++ b/src/pug/pages/homepage/services/interior_design/index.pug
@@ -24,6 +24,7 @@ html(lang="en")
         include ./how-it-works.pug
         include ./benefits.pug
         include ./related-projects.pug
+        include ./pricing.pug
 
         include ../../../../partials/components/form.pug
         include ../../../../partials/components/footer.pug
