created adaptive partners mixin for all pages

--- a/src/pug/pages/homepage/index.pug
+++ b/src/pug/pages/homepage/index.pug
@@ -18,6 +18,7 @@ html(lang="en")
         include ./services.pug
         include ./projects.pug
         include ./parthners.pug
+        include ./testimonials.pug
         include ./stats.pug
         include ../../partials/components/news-vidget.pug
 
