--- a/src/scss/pages/homepage/main.scss
+++ b/src/scss/pages/homepage/main.scss
@@ -4,7 +4,7 @@
 @use 'feedback';
 @use 'services';
 @use 'projects';
-@use 'parthners';
+@use 'testimonials';
 @use 'stats';
 
 @use './services/main.scss' as servicesPage;
