--- a/src/pug/pages/homepage/services/interior_design/index.pug
+++ b/src/pug/pages/homepage/services/interior_design/index.pug
@@ -25,6 +25,7 @@ html(lang="en")
         include ./benefits.pug
         include ./related-projects.pug
         include ./pricing.pug
+        include ./parthners.pug
 
         include ../../../../partials/components/form.pug
         include ../../../../partials/components/footer.pug
