added some fixes, finished interior-design page adaptive layout

--- a/src/pug/pages/homepage/services/interior_design/pricing.pug
+++ b/src/pug/pages/homepage/services/interior_design/pricing.pug
@@ -1,5 +1,9 @@
+include ../../../../_paths.pug
+
+
 .pricing 
     .container
+        img(src=`${paths.img.img}/bg-image.png`, alt="bg", class='pricing__bg')
         .pricing__header
             h2.pricing__title Pricing
             span.pricing__desc We offer you three categories of construction.
