--- a/src/scss/components/projects.scss
+++ b/src/scss/components/projects.scss
@@ -1,4 +1,4 @@
-@use '../../mixins/respond-to.scss' as *;
+@use '../mixins/respond-to.scss' as *;
 
 .projects {
     padding: 122px 0;
@@ -54,8 +54,21 @@
         max-width: 390px;
         cursor: grab;
 
+        @include respond-to(laptop-m) {
+            margin: 0 auto;
+        }
+
+        &:nth-child(n + 10) {
+            display: none;
+
+            &.is-visible {
+                display: block;
+            }
+        }
+
         .project-card {
             position: relative;
+            display: block;
             height: 440px;
 
             &::after {
