--- a/src/pug/pages/homepage/work/index.pug
+++ b/src/pug/pages/homepage/work/index.pug
@@ -1,10 +1,13 @@
+include ../../../_paths.pug
+
 doctype html
 html(lang="en")
     head
         meta(charset="UTF-8")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
+        link(rel="stylesheet", href=`${paths.css}`)
+        link(rel='stylesheet' href='https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.css')
         title Document
-        link(rel="stylesheet", href="/css/main.min.css")
     body 
         include ../../../partials/data/_hero_data.pug
         include ../../../partials/mixins/_hero.pug
@@ -12,14 +15,13 @@ html(lang="en")
 
         block content 
         -   
-        +hero(heroData.services)
+        +hero(heroData.work)
 
-        include ./services.pug
+        include ./tabs.pug
 
         include ../../../partials/components/form.pug
         include ../../../partials/components/footer.pug
 
-
-        
-
+        script(type="module", src=`${paths.js}/work/index.js`) 
+        script(type="module", src=`${paths.js}/work/loadCards.js`) 
 
