--- a/src/pug/partials/mixins/_parthners.pug
+++ b/src/pug/partials/mixins/_parthners.pug
@@ -1,5 +1,5 @@
 mixin parthners (content, titleKey, limit, mode, desc)
-    section.partners(class= mode)
+    section.partners.partners-pt(class= mode)
         .container
             h2.partners__title= content.title[titleKey]
             span.partners__decs= desc
