--- a/src/scss/components/parthners.scss
+++ b/src/scss/components/parthners.scss
@@ -5,6 +5,10 @@
     padding: 80px 0 122px;
     background-color: #fff;
 
+    &-pt {
+        padding-top: 188px;
+    }
+
     &.grey-theme {
         background-color: #F4F5F6;
     }
