--- a/src/scss/pages/homepage/testimonials.scss
+++ b/src/scss/pages/homepage/testimonials.scss
@@ -5,6 +5,10 @@
     margin-bottom: -178px;
     padding-top: 66px;
 
+    &-pt {
+        padding-top: 84px;
+    }
+
     &__title {
         font-size: 46px;
         margin-bottom: 60px;
