created layout for modern cottage page

--- a/src/pug/partials/mixins/_hero.pug
+++ b/src/pug/partials/mixins/_hero.pug
@@ -1,8 +1,9 @@
 mixin hero(content, className="hero")
     .hero
-        img(src=content.imgUrl, alt="hero-img", class="hero__bg")
+        if content.imgUrl
+            img(src=content.imgUrl, alt="hero-img", class="hero__bg")
         .container 
-            .hero__content
+            .hero__content.hero__content--pos-static
                 .hero__breadcrumbs-wrap
                     span.hero__breadcrumbs= content.breadcrumbs 
                     span.hero__breadcrumbs.hero__breadcrumbs--active= content.activeBreadcrumb
