--- a/src/pug/partials/data/_hero_data.pug
+++ b/src/pug/partials/data/_hero_data.pug
@@ -26,6 +26,12 @@ include ../../_paths.pug
                 title: 'OUR WORK',
                 desc: "Our portfolio represents 20 years of construction experience backed by a passion for perfect client service, quality and innovations in consctuction industry."
             },
+        modernCottage: 
+            {
+                breadcrumbs: "Homepage / Work / ",
+                activeBreadcrumb: "Modern Cottage",
+                title: 'Modern Cottage',
+            },
         about: 
             {
                 imgUrl: `${paths.img.img}/about/about-bg.png`,
