--- a/src/scss/components/hero.scss
+++ b/src/scss/components/hero.scss
@@ -25,6 +25,10 @@
         top: 0;
         padding: 152px 0 0 0;
 
+        &--pos-static {
+            position: static;
+        }
+
         @include respond-to(tablet-l) {
             padding: 100px 0 0 0;
         }
