finished slider adaptive layout

--- a/src/pug/partials/data/_hero_data.pug
+++ b/src/pug/partials/data/_hero_data.pug
@@ -4,6 +4,7 @@ include ../../_paths.pug
     var heroData = {
         services: 
             {
+                className: 'hero__content--absolute',
                 imgUrl: `${paths.img.img}/services/background.png`,
                 breadcrumbs: "Homepage /",
                 activeBreadcrumb: " Services",
@@ -12,6 +13,7 @@ include ../../_paths.pug
             },
         interiorDesign: 
             {
+                className: 'hero__content--absolute',
                 imgUrl: `${paths.img.img}/interior-design/head-bg.png`,
                 breadcrumbs: "Homepage / Services /",
                 activeBreadcrumb: " Interior Design",
@@ -20,6 +22,7 @@ include ../../_paths.pug
             },
         work: 
             {
+                className: 'hero__content--absolute',
                 imgUrl: `${paths.img.img}/works/bg-image.png`,
                 breadcrumbs: "Homepage / ",
                 activeBreadcrumb: "Work",
@@ -28,12 +31,14 @@ include ../../_paths.pug
             },
         modernCottage: 
             {
+                className: 'hero__content--static',
                 breadcrumbs: "Homepage / Work / ",
                 activeBreadcrumb: "Modern Cottage",
                 title: 'Modern Cottage',
             },
         about: 
             {
+                className: 'hero__content--absolute',
                 imgUrl: `${paths.img.img}/about/about-bg.png`,
                 breadcrumbs: "Homepage / ",
                 activeBreadcrumb: "About Us",
@@ -42,6 +47,7 @@ include ../../_paths.pug
             },
         availablePositions: 
             {
+                className: 'hero__content--absolute',
                 imgUrl: `${paths.img.img}/available-positions/head-bg.png`,
                 breadcrumbs: "Homepage / About Us",
                 activeBreadcrumb: "Available Positions",
@@ -50,6 +56,7 @@ include ../../_paths.pug
             },
         news: 
             {
+                className: 'hero__content--absolute',
                 imgUrl: `${paths.img.img}/services/background.png`,
                 breadcrumbs: "Homepage / ",
                 activeBreadcrumb: "News",
@@ -58,6 +65,7 @@ include ../../_paths.pug
             },
         hoToBuild: 
             {
+                className: 'hero__content--absolute',
                 imgUrl: `${paths.img.img}/services/background.png`,
                 breadcrumbs: "Homepage / News ",
                 activeBreadcrumb: "How to Build Climate Change-Resilient Infrastructure",
@@ -65,7 +73,8 @@ include ../../_paths.pug
                 desc: "Stay tuned with our news, expert tips and articles."
             },
         contacts: 
-            {
+            {   
+                className: 'hero__content--absolute',
                 imgUrl: `${paths.img.img}/contacts/head-bg.png`,
                 breadcrumbs: "Homepage / ",
                 activeBreadcrumb: "Contacts",
