--- a/src/scss/components/header.scss
+++ b/src/scss/components/header.scss
@@ -7,6 +7,7 @@
     background-color: transparent;
     padding: 28px 0;
     margin-bottom: -93px;
+    z-index: 1;
 
     .nav {
         display: flex;
