--- a/src/pug/pages/homepage/work/modern_cottage/index.pug
+++ b/src/pug/pages/homepage/work/modern_cottage/index.pug
@@ -16,9 +16,10 @@ html(lang="en")
         block content 
         -   
         +hero(heroData.modernCottage)
+            include ./slider.pug
 
         include ../../../../partials/components/form.pug
         include ../../../../partials/components/footer.pug
 
         script(src='https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.js')
-        script(type="module", src=`${paths.js}/work/index.js`) 
+        script(type="module" src=`${paths.js}/work/modern-cottage/slider.js`) 
