--- a/src/scss/components/parthners.scss
+++ b/src/scss/components/parthners.scss
@@ -5,9 +5,9 @@
     padding: 80px 0 122px;
     background-color: #fff;
 
-    &-pt {
-        padding-top: 188px;
-    }
+    // &-pt {
+    //     padding-top: 188px;
+    // }
 
     &.grey-theme {
         background-color: #F4F5F6;
@@ -18,9 +18,11 @@
         padding-bottom: 66px;
     }
 
+
     @include respond-to(mobile) {
-        padding-top: 46px;
+        padding: 80px 0 10px;
     }
+
 
     &__title {
         font-size: 46px;
