--- a/src/scss/pages/homepage/main.scss
+++ b/src/scss/pages/homepage/main.scss
@@ -9,3 +9,4 @@
 @use './services/main.scss' as servicesPage;
 @use './services/interior_design/main.scss' as interior_desing;
 @use './work/main.scss' as work_page;
+@use './work/modern_cottage/main.scss' as modern_cottage_page;
