--- a/src/scss/pages/homepage/stats.scss
+++ b/src/scss/pages/homepage/stats.scss
@@ -148,6 +148,12 @@
         z-index: 2;
     }
 
+    &__value {
+        font-size: 32px;
+        font-weight: 700;
+        color: #1E212C;
+    }
+
     &__desc {
         font-size: 14px;
         color: #1E212C
